# yuga-to-ob

./: .gitignore  Submit Spark.postman_collection.json  pyproject.toml
export_yuga/: dependency-reduced-pom.xml  pom.xml  run_export.sh
export_yuga/src/main/java/com/export/: checkDup.java  checkDupTest.java  dataExport.java
export_yuga/src/main/resources/: test.csv
launch_spark/: build_and_upload.sh  config.json  config.preprod.json  infra-dcluster-api-doc.md  launch.py  submit_job.py
load_ob/: config.json  loader.py
