[tool.poetry]
name = "yuga-to-ob"
version = "0.1.0"
description = ""
authors = ["datavisorkunshanzheng <kunshan.zheng@datavisor.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
boto3 = "^1.37.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
